--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,5 +2,5 @@
 default_section=THIRDPARTY
 force_single_line=False
 known_first_party=
-known_thrid_party=
+known_third_party=
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
